Fix overlap of active tabs with the nav buttons.

--- a/css/sp123-omega.styles.css
+++ b/css/sp123-omega.styles.css
@@ -708,7 +708,8 @@ table.fc-border-separate {
       border-color: #689a04;
       border-bottom: 2px solid transparent;
       background-color: #f5f5f5;
-      border-width: 2px; }
+      border-width: 2px;
+      z-index: 10; }
       .view-course-tabs .jcarousel-container .jcarousel-item-horizontal.active:before {
         z-index: 1;
         border-width: 2px;
