--- a/sass/components/_jcaruosel_nav.scss
+++ b/sass/components/_jcaruosel_nav.scss
@@ -32,6 +32,7 @@
 	    	border-bottom: 2px solid transparent;
 	    	background-color: #f5f5f5;
 	    	border-width: 2px;
+	    	z-index: 10;
 
 	    	&:before {
     			z-index: 1;
